--- a/reference/1.0.0/CardPointeGatewayAPI/CardPointeGatewayAPI.yaml
+++ b/reference/1.0.0/CardPointeGatewayAPI/CardPointeGatewayAPI.yaml
@@ -446,6 +446,68 @@ paths:
           content:  
             application/json:
               schema: {$ref: '#/components/schemas/BadRequestError'}
+  /cardconnect/rest/voidByOrderdid:
+    get:
+      tags:
+        - voidByOrderid Endpoint Definition
+      x-group-name: CardPointe Gateway API
+      x-proxy-name: voidByOrderid
+      x-default-example: PaymentCard
+      summary: The voidByOrderId endpoint is used to look up and void a transaction record using the order ID supplied in the original authorization request. If the order ID supplied in a voidByOrderId request matches a transaction record for the specified merchant, the authorization is voided and a response is returned.
+      description: | 
+        The voidByOrderId endpoint is used to look up and void a transaction record using the order ID supplied in the original authorization request. If the order ID supplied in a voidByOrderId request matches a transaction record for the specified merchant, the authorization is voided and a response is returned.
+
+        voidByOrderId can be used in the event that no response is returned by an inquireByOrderId request, when you are unsure of a transaction's status. It's recommended to call voidByOrderId three times (3x) if no response was returned by either an inquireByOrderid request or the initial auth request.
+        
+        Partial voids are not supported for debit transactions. If you specify a partial void amount for a debit transaction, the entire amount is voided. Omit the amount or specify the full amount for a debit void.
+        
+        It is strongly recommended that you use a unique order ID for every transaction, if you are using order IDs. Doing so allows you to more easily and accurately retrieve data on all transactions.
+      parameters:
+      - in: query
+        name: merchid
+        required: true
+        schema:
+          $ref: '#/components/schemas/merchid'
+          description: The MID from the original authorization.
+      - in: query
+        name: orderid
+        required: true
+        schema:
+          $ref: '#/components/schemas/orderId'
+          description: The Order ID from the original authorization.
+      - in: query
+        name: amount
+        required: false
+        schema:
+          description: |
+            Optional. If omitted or equal to $0, the full amount is voided.
+
+            If no capture has taken place (setlstat:Authorized), you can specify a partial amount to void to reduce the amount of the authorization.
+            
+            Note: Partial voids are not supported for debit transactions. If you specify a partial void amount for a debit transaction, the entire amount is voided. Omit the amount or specify the full amount for a debit void.
+          example: " "
+          type: integer
+          maxLength: 12
+      - in: header
+        $ref: '#/components/parameters/ContentTypeHeader'
+      - in: header
+        $ref: '#/components/parameters/Authorization'
+      responses:
+        200: 
+          description: Success
+          content:
+            application/json:
+              schema: {$ref: '#/components/schemas/voidByOrderIdResponse'} 
+        400:
+          description: Not Found
+          content:
+            application/json:
+              schema: {$ref: '#/components/schemas/NotFoundError'}
+        404:
+          description: Bad Request
+          content:  
+            application/json:
+              schema: {$ref: '#/components/schemas/BadRequestError'}
 components:
   parameters:
     Authorization:
@@ -1607,6 +1669,32 @@ components:
           $ref: '#/components/schemas/currency'
         retref:
           $ref: '#/components/schemas/retref'
+        respcode:
+          $ref: '#/components/schemas/respcode'
+        respproc:
+          $ref: '#/components/schemas/respproc'
+        respstat:
+          $ref: '#/components/schemas/respstat'
+        resptext:
+          $ref: '#/components/schemas/resptext'
+        receipt:
+          $ref: '#/components/schemas/receipt'
+    voidByOrderIdResponse:
+      x-model-version: 1.0
+      description: voidByOrderIdResponse
+      properties:
+        merchid:
+          $ref: '#/components/schemas/merchid'
+        orderId:
+          $ref: '#/components/schemas/orderId'
+        amount:
+          $ref: '#/components/schemas/amount'
+        currency:
+          $ref: '#/components/schemas/currency'
+        retref:
+          $ref: '#/components/schemas/retref'
+        authcode:
+          $ref: '#/components/schemas/authcode'
         respcode:
           $ref: '#/components/schemas/respcode'
         respproc:
